--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
 <p>this is a new repo</p>
-<p>this is the new feature by using a new branch</p>
+<p>this is the new feature by using a new branch (button)</p>
